k8s/network/networkpolicy-producer-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-allow
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: producer-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092
