k8s/network/networkpolicy-prometheus-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: dev
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus-server
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 9090
  policyTypes:
    - Ingress
